--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,12 @@
 **/android/gradlew.bat
 **/android/local.properties
 **/android/**/GeneratedPluginRegistrant.java
+**/android/key.json
+**/android/my-release-key.keystore
+
 
 # iOS/XCode related
+**/ios/builds
 **/ios/**/*.mode1v3
 **/ios/**/*.mode2v3
 **/ios/**/*.moved-aside
