--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_markdown: ^0.2.0
   html2md: ^0.3.0
   # ^ Stuff for flutter_html_view to work
+  # https://pub.dartlang.org/packages/flutter_statusbarcolor <<<
+  simple_moment: 1.0.2
 
 
 dev_dependencies:
